# numpyeigen-example-project

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
example/: __init__.py
src/: example.cpp
tests/: test_example.py
